Correção no termo atributo

--- a/HTML/anotacoes-e-rascunhos/1-inicio.html
+++ b/HTML/anotacoes-e-rascunhos/1-inicio.html
@@ -11,7 +11,7 @@
 
         - Abertura => Ex: <p>
         - Fechamento => Ex: </p>
-        - Paramêtros => Ex: <img src="">  (o src é um dos paramêtros possiveis)
+        - Atributos => Ex: <img src="">  (o src é um dos atributos possiveis)
 
         * Sempre em letra minuscula
         * Nem todas as tags tem fechamento ou precisam de algum conteúdo
