Anatações aula de links

--- a/HTML/anotacoes-e-rascunhos/1-inicio.html
+++ b/HTML/anotacoes-e-rascunhos/1-inicio.html
@@ -18,7 +18,7 @@
 
 -->
 
-<p> Paragrafo </p> <!-- Ex de tag com fechamento -->
+<p> Parágrafo </p> <!-- Ex de tag com fechamento -->
 
 <button> Clique aqui </button>
 
