Substitução de algumas imagens para imagens gratuitas e anotações da aula

--- a/HTML/anotacoes-e-rascunhos/5-Navegar-entre-pastas/pastaAcima/pastaAtual/5-navegarPastas.html
+++ b/HTML/anotacoes-e-rascunhos/5-Navegar-entre-pastas/pastaAcima/pastaAtual/5-navegarPastas.html
@@ -12,13 +12,13 @@
 -->
 
 
-<img src="./abacaxi.png"> <!-- Arquivo na mesma pasta -->
+<img src="./abacaxi.jpg"> <!-- Arquivo na mesma pasta -->
 
-<img src="./pastaInterna/morango.png"> <!-- Arquivo em uma pasta interna -->
+<img src="./pastaInterna/morango.jpg"> <!-- Arquivo em uma pasta interna -->
 
-<img src="../Abacate.png"> <!-- Arquivo em uma pasta acima -->
+<img src="../abacate.jpg"> <!-- Arquivo em uma pasta acima -->
 
-<img src="../../laranja.png"> <!-- Arquivo em mais de uma pasta acima -->
+<img src="../../laranja.jpg"> <!-- Arquivo em mais de uma pasta acima -->
 
 
 
