Comentario adicional nas anotações de imagens

--- a/HTML/anotacoes-e-rascunhos/9-Imagens/9-Imagens.html
+++ b/HTML/anotacoes-e-rascunhos/9-Imagens/9-Imagens.html
@@ -13,7 +13,7 @@
     Além de também fazer com que a mesma seja tratada de forma semântica, facilitando a leitura e melhor SEO
 
     <figcaption> é utilizada para ser a lengenda da mídia dentro da tag <figure>
-
+        
 -->
 
 
@@ -31,3 +31,13 @@
         alt="Cidade-Tianjin ao por do sol">
     <figcaption>Cidade-Tianjin ao por do sol</figcaption>
 </figure>
+
+
+<!--
+    Obs: Além do css, também é possivél alterar o tamanho das imagens
+     através dos atributos "height" (altura) e "width" (largura)
+
+     Alterando só um, a imagem irá corresponder o tamnanho do outro (não alterando a resolução)
+
+     Caso alterado os dois, a resolução será alterada
+-->
