Finalizando as duas primeiras as de CSS

--- a/CSS/1-Inicio/index.html
+++ b/CSS/1-Inicio/index.html
@@ -14,8 +14,11 @@
     - Através da tag <style> no próprio arquivo
 
     - Através de tag e atributos : <link href="./styles.css" rel="stylesheet">  
-      (rel de "relashionship", indica a qual o tipo de relação entre os dois arquivos)
-
+      - rel de "relashionship", indica a qual o tipo de relação entre os dois arquivos
+      - "stylesheet" de "folha de estilo"
+      - href para referenciar o local
+      - tag <link> tem que estar dentro da tag <head>
+    
 -->
 
 <!DOCTYPE html>
@@ -25,6 +28,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./styles.css" rel="stylesheet">
     <title>Iniciando o CSS</title>
 </head>
 
@@ -36,7 +40,7 @@
 
     <button>Clique Aqui</button>
 </body>
-
+<!--
 <style>
 /* 
     Estrutura
@@ -61,5 +65,6 @@
     }
 
 </style>
+  -->
 
 </html>
