--- a/CSS/projeto/index.html
+++ b/CSS/projeto/index.html
@@ -16,7 +16,7 @@
         <a>PRODUCT</a>
         <a>SERVICE</a>
         <a>CONTACT</a>
-        <button>LOG IN</button>
+        <button id="button-log-in">LOG IN</button>
     </header>
 
     <figure>
@@ -29,7 +29,7 @@
         <p>Lorem ipsum dolor sit amet consecteturad
             cing elit aenean a justo quis mauris hendri
             pellentesque eget at ipsumuis cursusturpi.</p>
-        <button>EXPLORE</button>
+        <button id="button-explore">EXPLORE</button>
     </main>
 </body>
 
