--- a/CSS/projeto/index.html
+++ b/CSS/projeto/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>We Care</title>
 </head>
@@ -19,17 +22,19 @@
         <button id="button-log-in">LOG IN</button>
     </header>
 
-    <figure>
-        <img src="./img/logo.png" alt="logo-We-Care">
-    </figure>
+    <main> <!-- Tag para estrutura semântica, representa conteúdo principal da página -->
+        <figure>
+            <img src="./img/logo.png" alt="logo-We-Care">
+        </figure>
 
-    <main>
-        <h1>WE CARE</h1>
-        <h2>About Your Pet</h2>
-        <p>Lorem ipsum dolor sit amet consecteturad
-            cing elit aenean a justo quis mauris hendri
-            pellentesque eget at ipsumuis cursusturpi.</p>
-        <button id="button-explore">EXPLORE</button>
+        <section>
+            <h1>WE CARE</h1>
+            <h2>About Your Pet</h2>
+            <p>Lorem ipsum dolor sit amet consecteturad
+                cing elit aenean a justo quis mauris hendri
+                pellentesque eget at ipsumuis cursusturpi.</p>
+            <button id="button-explore">EXPLORE</button>
+        </section>
     </main>
 </body>
 
