Estilização e posicionamento - Header

--- a/CSS/desafio/index.html
+++ b/CSS/desafio/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <header>
-        <a>Products</a>
-        <a>Company</a>
-        <a>Blog</a>
-        <a>Log in</a>
+        <a class="header-menu">Products</a>
+        <a class="header-menu">Company</a>
+        <a class="header-menu">Blog</a>
+        <a class="header-menu">Log in</a>
         <button>Sign up</button>
     </header>
 
