Estilização e posicionamento - Main, figure e section

--- a/CSS/desafio/index.html
+++ b/CSS/desafio/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <header>
-        <a class="header-menu">Products</a>
-        <a class="header-menu">Company</a>
-        <a class="header-menu">Blog</a>
-        <a class="header-menu">Log in</a>
+        <a class="header-link">Products</a>
+        <a class="header-link">Company</a>
+        <a class="header-link">Blog</a>
+        <a class="header-link">Log in</a>
         <button>Sign up</button>
     </header>
 
@@ -31,7 +31,7 @@
             <p>Shared rides, There’s lots to do in your city,
                 and we’ve got the rides to help you enjoy it all. And
                 they’re all available right from your app.</p>
-            <a>Learn more</a>
+            <a id="section-link">Learn more</a>
         </section>
     </main>
 </body>
