--- a/Javascript/projeto/index.html
+++ b/Javascript/projeto/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
     <title>Conversor de Moeda</title>
 </head>
@@ -15,22 +18,22 @@
     </header>
 
     <main>
-        <label>Converter de:
+        <label>Converter <b>de</b>
             <select>
-                <option>R$ Real brasileiro</option>           
+                <option>R$ Real brasileiro</option>
             </select>
         </label>
 
-        <label>Converter para:
+        <label>Converter <b>para</b>
             <select>
-                <option>US$ Dólar americano</option>  
+                <option>US$ Dólar americano</option>
                 <option>€ Euro</option>
-                <option>Bitcoin</option>          
+                <option>₿ Bitcoin</option>
             </select>
         </label>
 
-        <label>Valor
-            <input placeholder="R$ 10.000">
+        <label><b>Valor</b>
+            <input placeholder="R$ 10.000,00">
         </label>
 
         <button type="button">Converter</button>
