--- a/Javascript/projeto/index.html
+++ b/Javascript/projeto/index.html
@@ -19,13 +19,13 @@
 
     <main>
         <label>Converter <b>de</b>
-            <select id="convertFrom">
+            <select id="convert-from">
                 <option>R$ Real brasileiro</option>
             </select>
         </label>
 
         <label>Converter <b>para</b>
-            <select id="convertTo">
+            <select id="convert-to">
                 <option>US$ Dólar americano</option>
                 <option>€ Euro</option>
                 <option>₿ Bitcoin</option>
@@ -33,27 +33,27 @@
         </label>
 
         <label><b>Valor</b>
-            <input id="valueSent" placeholder="R$ 10.000,00" type="number">
+            <input id="value-sent" placeholder="R$ 10.000,00" type="number">
         </label>
 
-        <button id="convertButton" type="button">Converter</button>
+        <button id="convert-button" type="button">Converter</button>
 
         <section>
             <figure>
-                <img id="flagToConvert" src="./assets/brazil-flag.png" alt="bandeira do Brasil">
-                <figcaption id="captionToConvert">Real</figcaption>
+                <img id="flag-convert-from" src="./assets/brazil-flag.png" alt="bandeira do Brasil">
+                <figcaption id="caption-convert-from">Real</figcaption>
             </figure>
-            <p id="valueToConvert">R$ 10.000,00</p>
+            <p id="value-convert-from">R$ 10.000,00</p>
 
             <figure>
                 <img src="./assets/small-arrow.png" alt="seta apontando para baixo">
             </figure>
 
             <figure>
-                <img id="flagConverted" src="./assets/usa-flag.png" alt="bandeira dos estados unidos">
-                <figcaption id="captionConverted">Dólar Americano</figcaption>
+                <img id="flag-convert-to" src="./assets/usa-flag.png" alt="bandeira dos estados unidos">
+                <figcaption id="caption-convert-to">Dólar Americano</figcaption>
             </figure>
-            <p id="valueConverted">US$ 2.000,00</p>
+            <p id="value-convert-to">US$ 2.000,00</p>
         </section>
     </main>
 </body>
