--- a/CSS-Display-Grid/Exemplo-Pratico/index.html
+++ b/CSS-Display-Grid/Exemplo-Pratico/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles.css" rel="stylesheet">
-    <title>Grid row</title>
+    <title>Exemplo Prático</title>
 </head>
 <body>
     <div class="container">
