Correção na descrição - Declaração Doctype

--- a/HTML/anotacoes-e-rascunhos/2-estrutura.html
+++ b/HTML/anotacoes-e-rascunhos/2-estrutura.html
@@ -8,7 +8,7 @@
 
 -->
 
-<!DOCTYPE html> <!-- Faz com que o documento/arquivo utilize a versão mais recente do html -->
+<!DOCTYPE html> <!-- Declaração que informa qual versão do html está será utilizada (no caso, html5) -->
 <html lang="en"> <!-- Define o arquivo como html e o atributo "lang" informa o idioma do site -->
 <head> <!-- Onde se encontram as configurações do site -->
     <meta charset="UTF-8"> <!-- Define o padrão de caracteres -->
