Correção na descrição - Tag html

--- a/HTML/anotacoes-e-rascunhos/2-estrutura.html
+++ b/HTML/anotacoes-e-rascunhos/2-estrutura.html
@@ -9,7 +9,7 @@
 -->
 
 <!DOCTYPE html> <!-- Declaração que informa qual versão do html está será utilizada (no caso, html5) -->
-<html lang="en"> <!-- Define o arquivo como html e o atributo "lang" informa o idioma do site -->
+<html lang="en"> <!-- Indica o inicio e o fim do contéudo html e o atributo "lang" informa o idioma do site -->
 <head> <!-- Onde se encontram as configurações do site -->
     <meta charset="UTF-8"> <!-- Define o padrão de caracteres -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Faz com que o site seja compativel com internet explorer -->
