--- a/HTML/anotacoes-e-rascunhos/3-SEO.html
+++ b/HTML/anotacoes-e-rascunhos/3-SEO.html
@@ -6,11 +6,11 @@
           Ex: Google, Bing, etc.
 
     Para o site ser melhor ranqueado nos motores de busca é essencial
-    que a estrutura e as tags estejam correstas para cada elemento
+    que a estrutura e as tags estejam corretas para cada elemento
 
-    Além disso, é importante também a estrutura esteja semântica
+    Além disso, é importante também que a estrutura esteja semântica
 
-    * Dica: Repitir o titulo/palavras chaves em outros lugares
-    como no paragráfo por exemplo podem ajudar
+    * Dica: Repetir o titulo/palavras chaves em outros lugares
+    como no parágrafo por exemplo podem ajudar
 -->
 
