Comentário adicional - Descrição das demais tags de título

--- a/HTML/anotacoes-e-rascunhos/4-Textos.html
+++ b/HTML/anotacoes-e-rascunhos/4-Textos.html
@@ -9,7 +9,7 @@
 -->
 
     <h1>Titulo principal</h1> <!-- Em geral, o nome principal do site (Ex: Carrefour, Blog do Fulano, etc. * Recomendado apenas um por site -->
-    <h2></h2>
+    <h2></h2> <!-- Titulo secundário e subsequentes podem ser repetidos -->
     <h3></h3>
     <h4></h4>
     <h5></h5>
