Descrição - pequenas correções de pontuação

--- a/HTML/anotacoes-e-rascunhos/18-Semantica/18-Semantica.html
+++ b/HTML/anotacoes-e-rascunhos/18-Semantica/18-Semantica.html
@@ -1,7 +1,7 @@
 <!--
     Semântica (Voltada a Estrutura)
 
-    Para o SEO (Mecanismos de busca como Google) terem uma melhor leitura e por consequencia ranquear melhor o site
+    Para o SEO (Mecanismos de busca como Google) terem uma melhor leitura e por consequência, ranquear melhor o site,
     é importante que a estrutura seja semântica
 
     Semelhante a função da tag div, as tags abaixo também dizem ao SEO, qual parte do site está sendo mostrada
