--- a/Projeto-Fullstack/front-end/public/index.html
+++ b/Projeto-Fullstack/front-end/public/index.html
@@ -10,7 +10,9 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@100;300;400;500;700&display=swap"
+    rel="stylesheet">
   <title>Codeburger</title>
 </head>
 
