Html - Descrição do figcaption e Alteração da resolução corrigidos

--- a/HTML/anotacoes-e-rascunhos/9-Imagens/9-Imagens.html
+++ b/HTML/anotacoes-e-rascunhos/9-Imagens/9-Imagens.html
@@ -12,7 +12,7 @@
     <figure> Similar a tag <div>, essa tag marca uma seção do conteúdo que contém alguma midia (imagem, video, gráfico, etc)
     Além de também fazer com que a mesma seja tratada de forma semântica, facilitando a leitura e melhor SEO
 
-    <figcaption> é utilizada para ser a lengenda da mídia dentro da tag <figure>
+    <figcaption> é utilizada para ser a legenda da mídia dentro da tag <figure>
         
 -->
 
@@ -37,7 +37,7 @@
     Obs: Além do css, também é possivél alterar o tamanho das imagens
      através dos atributos "height" (altura) e "width" (largura)
 
-     Alterando só um, a imagem irá corresponder o tamnanho do outro (não alterando a resolução)
+     Alterando só um, a imagem irá corresponder o tamanho do outro (não alterando a resolução)
 
      Caso alterado os dois, a resolução será alterada
 -->
