HTML - Input Radio, correção na descrição

--- a/HTML/anotacoes-e-rascunhos/14-Inputs/14-Inputs3.html
+++ b/HTML/anotacoes-e-rascunhos/14-Inputs/14-Inputs3.html
@@ -5,19 +5,19 @@
 
 -->
 <label>Senha:
-    <input type="password"> <!-- Caracteres ficam escondidos-->
+    <input type="password"> <!-- Caracteres ficam escondidos -->
 </label>
 
 <br><br><br>
 
 <label>Email:
-    <input type="Email"> <!-- Exige um "@" para de fato ser um email-->
+    <input type="Email"> <!-- Exige um "@" para de fato ser um email -->
 </label>
 
 <br><br><br>
 
 <label> Caso sim, marque a caixa:
-    <input type="checkbox"> <!-- Caixa para marcar -->
+    <input type="checkbox"> <!-- Caixa para marcar/checar, permite multiplas escolhas -->
 </label>
 
 <br><br><br>
@@ -49,8 +49,8 @@
 
 
 <!-- 
-    Parecido com o checkbox, radio também é de marcação
-    Porém é utilizado para questões de multipla escolha
+    Parecido com o checkbox, radio também é de marcação, porém NÂO é utilizado para
+    questões de multipla escolhas. Ele só permite escolhar uma dentre as opções.
 
     É necessario que todas as opções tenham o mesmo "name"
 -->
