Projeto Previsão do Tempo - Iniciando a estilização, Background com imagens alternadas

--- a/Projeto-de-Eventos/Previsão-do-Tempo/index.html
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/index.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta htttp-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <input>
-    <button>Buscar</button>
+    <div>
+        <input>
+        <button>Buscar</button>
 
-    <h2>Tempo em Rio de Janeiro</h2>
-    <p>28°C</p>
+        <h2>Tempo em Rio de Janeiro</h2>
+        <p>28°C</p>
 
-    <p>Nuvens Dispersas</p>
-    <p>Umidade: 70%</p>
+        <p>Nuvens Dispersas</p>
+        <p>Umidade: 70%</p>
+    </div>
 </body>
 
 </html>
