Projeto Previsão do Tempo - Estilização dos componentes

--- a/Projeto-de-Eventos/Previsão-do-Tempo/index.html
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/index.html
@@ -10,16 +10,19 @@
 </head>
 
 <body>
-    <div>
-        <input>
-        <button>Buscar</button>
+    <main>
+        <div>
+            <input placeholder="Cidade">
+            <button>Buscar</button>
+        </div>
 
-        <h2>Tempo em Rio de Janeiro</h2>
-        <p>28°C</p>
+        <div>
+            <h2>Tempo em Rio de Janeiro</h2>
+            <p>28°C</p>
 
-        <p>Nuvens Dispersas</p>
-        <p>Umidade: 70%</p>
-    </div>
+            <p>Nuvens Dispersas</p>
+            <p>Humidade: 70%</p>
+        </div>
 </body>
 
 </html>
