--- a/Projeto-de-Eventos/Previsão-do-Tempo/index.html
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta htttp-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Previsão do Tempo</title>
 </head>
 
 <body>
     <main>
-        <div>
-            <input placeholder="Cidade">
-            <button>Buscar</button>
-        </div>
+        <input placeholder="Digite o nome da cidade">
+        <button>
+            <img id="search-img" src="https://www.svgrepo.com/show/488200/find.svg">
+        </button>
 
         <div>
             <h2>Tempo em Rio de Janeiro</h2>
