Projeto Previsão do Tempo - Logíca do Input, Button e Informações do Clima chegando pela API

--- a/Projeto-de-Eventos/Previsão-do-Tempo/index.html
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/index.html
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <script src="scripts.js"></script>
     <title>Previsão do Tempo</title>
 </head>
 
 <body>
     <main>
         <input placeholder="Digite o nome da cidade">
-        <button>
+        <button onclick="getCityName()">
             <img id="search-img" src="https://www.svgrepo.com/show/488200/find.svg">
         </button>
 
