--- a/Projeto-de-Eventos/Previsão-do-Tempo/index.html
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/index.html
@@ -22,10 +22,9 @@
 
         <div>
             <h2>Tempo em Rio de Janeiro</h2>
-            <p>28°C</p>
-
-            <p>Nuvens Dispersas</p>
-            <p>Humidade: 70%</p>
+            <p id="temp">28°C</p>
+            <p id="description">Nuvens Dispersas</p>
+            <p id="humidity">Humidade: 70%</p>
         </div>
 </body>
 
