Projeto Previsão do Tempo - Icon + alteração do icon após alteração de cidade

--- a/Projeto-de-Eventos/Previsão-do-Tempo/index.html
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/index.html
@@ -20,11 +20,16 @@
             <img id="search-img" src="https://www.svgrepo.com/show/488200/find.svg">
         </button>
 
-        <div>
-            <h2>Tempo em Rio de Janeiro</h2>
-            <p id="temp">28°C</p>
-            <p id="description">Nuvens Dispersas</p>
-            <p id="humidity">Humidade: 70%</p>
+        <div id="main-div">
+            <h2>Tempo em Rio de Janeiro<h2>
+                    <p id="temp">28°C</p>
+
+                    <div id="description-div">
+                        <img id="icon" src="https://openweathermap.org/img/wn/04n.png">
+                        <p id="description">Nuvens Dispersas</p>
+                    </div>
+
+                    <p id="humidity">Umidade: 70%</p>
         </div>
 </body>
 
