--- a/Projeto-de-Eventos/Netflix-Replica/index.html
+++ b/Projeto-de-Eventos/Netflix-Replica/index.html
@@ -29,10 +29,13 @@
 
     <div id="bottom-container">
         <h2>Perguntas frequentes</h2>
-        <button>O que é a Netflix? <img src="./assets/close.svg" alt="icone-de-fechar"></button>
-        <div>
+        <button id="question-button">O que é a Netflix?
+            <img id="question-img" src="./assets/close.svg" alt="icone-de-fechar">
+        </button>
+        <div id="answer-div">
             <p>A Netflix é um serviço de streaming que oferece uma ampla variedade de séries, filmes e documentários
                 premiados em milhares de aparelhos conectados à internet.</p>
+            <br>
             <p>Você pode assistir a quantos filmes e séries quiser, quando e onde quiser - tudo por um preço mensal
                 acessível. Aqui você sempre encontra novidades. A cada semana, adicionamos novas séries e filmes.</p>
         </div>
