--- a/Projeto-de-Eventos/Netflix-Replica/index.html
+++ b/Projeto-de-Eventos/Netflix-Replica/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix - Replica</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Netflix - Replica</title>
 </head>
 
 <body>
@@ -41,5 +41,6 @@
         </div>
     </div>
 </body>
+<script src="scripts.js"></script>
 
 </html>
