--- a/Javascript/Map Reduce e Filter/projeto - arrays/index.html
+++ b/Javascript/Map Reduce e Filter/projeto - arrays/index.html
@@ -24,7 +24,7 @@
     <ul>
         <li>
             <img src="./img/bacon-egg.png">
-            <p class="name">X-Bacon Egg</p>
+            <p>X-Bacon Egg</p>
             <p class="price">R$ 30,00</p>
         </li>
     </ul>
