Javascript - Logica de montagem da lista com todos os produtos, Botão ForEach

--- a/Javascript/Map Reduce e Filter/projeto - arrays/index.html
+++ b/Javascript/Map Reduce e Filter/projeto - arrays/index.html
@@ -15,19 +15,17 @@
 
 <body>
     <div>
-        <button>Mostrar tudo <br>ForEach</button>
-        <button>Mapear <br>Map</button>
-        <button>Somar tudo <br>Reduce</button>
-        <button>Filtrar <br>Filter</button>
+        <button id="show-all">Mostrar tudo <br>ForEach</button>
+        <button id="discount">Mapear <br>Map</button>
+        <button id="sum-all">Somar tudo <br>Reduce</button>
+        <button id="vegan">Filtrar <br>Filter</button>
     </div>
 
     <ul>
-        <li>
-            <img src="./img/bacon-egg.png">
-            <p>X-Bacon Egg</p>
-            <p class="price">R$ 30,00</p>
-        </li>
+        
     </ul>
 </body>
+
+<script src="./scripts.js" type="module"></script>
 
 </html>
